--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "astro": "^5.17.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^3",
