--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
+  "buildCommand": "bun run build",
+  "installCommand": "bun install",
+  "framework": "astro",
   "headers": [
     {
       "source": "/(.*)",
